# vpip

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  README.rst  cute.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup.cfg  test.py
.github/workflows/: build.yml
docs/: api.rst  commands.rst  conf.py  index.rst
docs/api/: vpip.cli.rst  vpip.commands.install.rst  vpip.commands.link.rst  vpip.commands.list.rst  vpip.commands.outdated.rst  vpip.commands.rst  vpip.commands.run.rst  vpip.commands.uninstall.rst  vpip.commands.update.rst  vpip.commands.update_venv.rst  vpip.dependency.rst  vpip.execute.rst  vpip.pip_api.rst  vpip.pypi.rst  vpip.venv.rst
tests/: test_main.py
vpip/: __init__.py  cli.py  dependency.py  execute.py  pip_api.py  pypi.py  venv.py
vpip/commands/: __init__.py  install.py  link.py  list.py  outdated.py  run.py  uninstall.py  update.py  update_venv.py
