[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vpip"
version = "0.10.1"
description = "A CLI which aims to provide an npm-like experience when working with Python packages."
authors = [{name = "eight", email = "eight04@gmail.com"}]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["pip", "pipm", "pipx", "venv", "vex", "virtualenv", "pipenv", "pdm", "poetry"]
license = {text = "MIT"}
readme = "README.rst"
urls = {Homepage = "https://github.com/eight04/vpip"}
dependencies = ["case-conversion~=2.1", "configupdater~=3.2", "packaging~=24.2", "requests~=2.32", "tomlkit~=0.13.2"]

[project.scripts]
vpip = "vpip.cli:cli"

[tool.vpip]
command_fallback = "python cute.py"
