[metadata]
name = vpip
version = 0.8.0
description = A CLI which aims to provide an npm-like experience when working with Python packages.
author = eight
author_email = eight04@gmail.com

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)
    Operating System :: Microsoft :: Windows :: Windows 7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    
keywords = pip, pipm, venv, vex, virtualenv, pipenv
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/vpip

[options]
zip_safe = True
packages = find:
install_requires =
    case-conversion~=2.1
    configupdater~=3.0
    packaging~=21.3
    requests~=2.27

[options.entry_points]
console_scripts = 
    vpip = vpip.cli:cli
    
[vpip]
command_fallback = python cute.py
